# handm_v3

./: .gitignore  README.md  pyproject.toml
src/: cand.py  cf.py  main.py  metrics_calculator.py  ranker.py  text_embedding.py  text_sentiment_analysis.py
src/conf/: config.yaml
