[tool.poetry]
name = "handm-v3"
version = "0.1.0"
description = ""
authors = ["Taisuke Minami <tmnm13009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
pydantic = "^2.11.7"
pyyaml = "^6.0.2"
numpy = "^2.3.2"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
scikit-learn = "^1.7.1"
lightgbm = "^4.6.0"
shap = "^0.48.0"
sentence-transformers = "^5.1.0"
tqdm = "^4.67.1"
implicit = "^0.7.2"
h5py = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
